tests/ui/nll/user-annotations/region-error-ice-109072.stderr
error[E0261]: use of undeclared lifetime name `'missing`
  --> $DIR/region-error-ice-109072.rs:8:9
   |
LL | impl Lt<'missing> for () {
   |     -   ^^^^^^^^ undeclared lifetime
   |     |
   |     help: consider introducing lifetime `'missing` here: `<'missing>`

error[E0261]: use of undeclared lifetime name `'missing`
  --> $DIR/region-error-ice-109072.rs:9:15
   |
LL |     type T = &'missing ();
   |               ^^^^^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'missing` here
   |
LL |     type T<'missing> = &'missing ();
   |           ++++++++++
help: consider introducing lifetime `'missing` here
   |
LL | impl<'missing> Lt<'missing> for () {
   |     ++++++++++

error[E0277]: the trait bound `(): Lt<'_>` is not satisfied
  --> $DIR/region-error-ice-109072.rs:13:13
   |
LL |     let _: <() as Lt<'_>>::T = &();
   |             ^^ the trait `Lt<'_>` is not implemented for `()`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0261, E0277.
For more information about an error, try `rustc --explain E0261`.
